kubernetes/numeracy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: numeracy
  labels:
    app: numeracy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: numeracy
    spec:
      containers:
      - name: numeracy
        image: numeracy/onprem:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 1
            memory: 1Gi
        ports:
        - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: numeracy
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: numeracy
