kubernetes/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cpdp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ${DESKTOP_DOMAIN}
        - ${MOBILE_DOMAIN}
        - ${API_DOMAIN}
        - ${NUMERACY_DOMAIN}
      secretName: tls-secret
  rules:
    - host: ${DESKTOP_DOMAIN}
      http:
        paths:
          - path: /admin
            backend:
              serviceName: gunicorn
              servicePort: 80
          - path: /sitemap
            backend:
              serviceName: gunicorn
              servicePort: 80
          - path: /
            backend:
              serviceName: desktop-frontend
              servicePort: 80
    - host: ${MOBILE_DOMAIN}
      http:
        paths:
          - path: /admin
            backend:
              serviceName: gunicorn
              servicePort: 80
          - path: /
            backend:
              serviceName: mobile-frontend
              servicePort: 80
    - host: ${API_DOMAIN}
      http:
        paths:
          - path: /
            backend:
              serviceName: gunicorn
              servicePort: 80
    - host: ${NUMERACY_DOMAIN}
      http:
        paths:
          - path: /
            backend:
              serviceName: numeracy
              servicePort: 80
